agregacion de footer

--- a/portafolio/src/app/components/header/header.component.html
+++ b/portafolio/src/app/components/header/header.component.html
@@ -1,7 +1,5 @@
 <div>
-    <!logo Argentina programa>
+    <!--logo Argentina programa-->
         <img class=logoAP src="../../../assets/logoAP.png" alt="">
 </div>
-<!-- aqui cargo la imagen de fondo -->
-<!logo Argentina programa>
-        <img class=fondoWeb src="../../../assets/imgBackGround.jpg" alt="">
+
