--- a/portafolio/src/app/components/header/header.component.html
+++ b/portafolio/src/app/components/header/header.component.html
@@ -1,5 +1,10 @@
 <div>
     <!--logo Argentina programa-->
         <img class=logoAP src="../../../assets/logoAP.png" alt="">
+    <!-- Logos y links de redes sociales-->
+    <a href="">  <img src="../../../assets/instagram.png" id="instagram"></a>
+    <a href="">  <img src="../../../assets/github.png" id="github"></a>
 </div>
+
+
 
