--- a/portafolio/src/app/components/header/header.component.html
+++ b/portafolio/src/app/components/header/header.component.html
@@ -2,8 +2,8 @@
     <!--logo Argentina programa-->
         <img class=logoAP src="../../../assets/logoAP.png" alt="">
     <!-- Logos y links de redes sociales-->
-    <a href="">  <img src="../../../assets/instagram.png" id="instagram"></a>
-    <a href="">  <img src="../../../assets/github.png" id="github"></a>
+    <a href="https://www.instagram.com/package.binaries/?next=%2F">  <img src="../../../assets/instagram.png" id="instagram"></a>
+    <a href="https://github.com/Avellaneda810">  <img src="../../../assets/github.png" id="github"></a>
 </div>
 
 
