--- a/portafolio/src/app/components/acerca-de/acerca-de.component.html
+++ b/portafolio/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,16 @@
-
+<div class="row">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <img src="../../../assets/perfiFoto.webp" class="img-fluid" id="fotoPerfil">
+    </div>
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <h6 id="nombre">Angel Gabriel Avellaneda</h6>
+        <h6 id="titulo">Full Stack Developer Jr.</h6>
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+            <h6>Acerca de mi
+            </h6>
+            <h6>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae pariatur fuga voluptatem nesciunt, in reprehenderit ab iusto velit quod sed, saepe eligendi doloremque reiciendis dolores! Iure, quos earum. Explicabo?
+            </h6>
+    </div>
+</div>
