--- a/portafolio/src/app/components/header/header.component.html
+++ b/portafolio/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
     <!-- Logos y links de redes sociales-->
     <a href="https://www.instagram.com/package.binaries/?next=%2F">  <img src="../../../assets/instagram.png" id="instagram"></a>
     <a href="https://github.com/Avellaneda810">  <img src="../../../assets/github.png" id="github"></a>
+    <app-banner></app-banner>
 </div>
 
 
