estructura educacion, experiencia,hys y proyectos

--- a/portafolio/src/app/components/h/h.component.html
+++ b/portafolio/src/app/components/h/h.component.html
@@ -1,1 +1,77 @@
-<p>h works!</p>
+<div class="row">
+    <h5>Hard & Soft Skills </h5>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%">HTML</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 50%">CSS</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%">ANGULAR</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 45%">TYPESCRIPT</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 85%">JAVA</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 55%">MYSQL</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 65%">GITHUB</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 50%">INGLÉS</div>
+                    </div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6></h6>
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 80%">COOPERACIÓN</div>
+                    </div>
+            </li>
+        </ul>
+    </div>
+</div>
