--- a/portafolio/src/app/components/header/header.component.html
+++ b/portafolio/src/app/components/header/header.component.html
@@ -1,10 +1,12 @@
-<div>
-    <!--logo Argentina programa-->
-        <img class=logoAP src="../../../assets/logoAP.png" alt="">
-    <!-- Logos y links de redes sociales-->
-    <a href="https://www.instagram.com/package.binaries/?next=%2F">  <img src="../../../assets/instagram.png" id="instagram"></a>
-    <a href="https://github.com/Avellaneda810">  <img src="../../../assets/github.png" id="github"></a>
-    <app-banner></app-banner>
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <!--logo Argentina programa-->
+            <img class=logoAP src="../../../assets/logoAP.png" alt="">
+        <!-- Logos y links de redes sociales-->
+            <a href="https://www.instagram.com/package.binaries/?next=%2F">  <img src="../../../assets/instagram.png" id="instagram"></a>
+            <a href="https://github.com/Avellaneda810">  <img src="../../../assets/github.png" id="github"></a>
+            <app-banner></app-banner>
+    </div>
 </div>
 
 
