--- a/portafolio/src/app/components/proyectos/proyectos.component.html
+++ b/portafolio/src/app/components/proyectos/proyectos.component.html
@@ -1,1 +1,27 @@
-<p>proyectos works!</p>
+<div class="row">
+    
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h5>Proyectos</h5>
+        <ul>
+            <li>
+                <h6>Nombre Proyecto 1</h6>
+                <h6>Descripcion:</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dicta molestias. Nisi aliquid sequi ad quisquam vel consequuntur in, exercitationem, ea id facere expedita minima voluptates distinctio qui mollitia ratione.</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6>Nombre Proyecto 2</h6>
+                <h6>Descripcion:</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dicta molestias. Nisi aliquid sequi ad quisquam vel consequuntur in, exercitationem, ea id facere expedita minima voluptates distinctio qui mollitia ratione.</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h6>Nombre Proyecto 3</h6>
+                <h6>Descripcion:</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dicta molestias. Nisi aliquid sequi ad quisquam vel consequuntur in, exercitationem, ea id facere expedita minima voluptates distinctio qui mollitia ratione.</p>
+            </li>
+        </ul>
+    </div>
+</div>
