--- a/portafolio/src/app/app.component.html
+++ b/portafolio/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<app-contacto></app-contacto>
 <app-acerca-de></app-acerca-de>
-<!-- aqui cargo la imagen de fondo -->
-
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+<app-h></app-h>
+<app-proyectos></app-proyectos>
