--- a/portafolio/src/app/components/experiencia/experiencia.component.html
+++ b/portafolio/src/app/components/experiencia/experiencia.component.html
@@ -1,1 +1,28 @@
-<p>experiencia works!</p>
+<div class="row">
+    <h5>
+        Experiencia 
+    </h5>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <ul>
+            <li>
+                <h6>Trabajo 1 (Periodo)</h6>
+                <h6>Descripcion:</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nobis molestias, possimus debitis ex incidunt laudantium animi, maxime at reiciendis error magnam perspiciatis aliquam consequatur non consectetur impedit facere? Fuga.</p>
+            </li>
+        </ul>
+        <ul>
+            <li>   
+                <h6>Trabajo 2 (Periodo)</h6>
+                <h6>Descripcion:</h6>
+                <p>Lorem ipsum se voluptate assumenda officiis sit quo! Impedit praesentium minima quod harum quae enim quo esse consequuntur.</p>
+            </li>
+        </ul>
+        <ul>
+            <li>  
+                <h6>Trabajo 3 (Periodo)</h6>
+                <h6>Descripcion:</h6>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga mollitia recusandae sed dolorem a illum laboriosam quas quasi repudiandae? Asperiores voluptas praesentium, perspiciatis eligendi rerum maxime eius architecto obcaecati dolorem.</p>
+            </li>
+        </ul>
+    </div>
+</div>
