agregacio de footer y arreglos responsive

--- a/portafolio/src/app/components/banner/banner.component.css
+++ b/portafolio/src/app/components/banner/banner.component.css
@@ -1,5 +1,9 @@
+.row{
+    background: #202020e1;
+}
 #banner{
-    padding:15px;
+   
+    padding-left:20px;
     width: 100%;
     height: 500px;
 }
