--- a/portafolio/src/app/components/footer/footer.component.html
+++ b/portafolio/src/app/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <footer>
+            <h6> Argentina Progama 2022/2023 </h6>
+            <h6>Ángel Gabriel Avellaneda | Desarrollador Full Stack Jr.</h6>
+            <h6>Rio Negro, Argentina</h6>
+        </footer>
+    </div>
+</div>
