--- a/portafolio/src/app/components/header/header.component.html
+++ b/portafolio/src/app/components/header/header.component.html
@@ -1,12 +1,17 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="container">
+        <div class="logo">
         <!--logo Argentina programa-->
             <img class=logoAP src="../../../assets/logoAP.png" alt="">
+        </div>
+        <div class="redes">
         <!-- Logos y links de redes sociales-->
             <a href="https://www.instagram.com/package.binaries/?next=%2F">  <img src="../../../assets/instagram.png" id="instagram"></a>
             <a href="https://github.com/Avellaneda810">  <img src="../../../assets/github.png" id="github"></a>
-            <app-banner></app-banner>
+            <button type="button" class="btn btn-outline-ligth">Iniciar sesión</button>
+        </div>
     </div>
+    <app-banner></app-banner>
 </div>
 
 
