--- a/portafolio/src/app/components/proyectos/proyectos.component.html
+++ b/portafolio/src/app/components/proyectos/proyectos.component.html
@@ -7,6 +7,7 @@
                 <h6>Nombre Proyecto 1</h6>
                 <h6>Descripcion:</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dicta molestias. Nisi aliquid sequi ad quisquam vel consequuntur in, exercitationem, ea id facere expedita minima voluptates distinctio qui mollitia ratione.</p>
+                <img src="" alt="">
             </li>
         </ul>
         <ul>
@@ -14,6 +15,7 @@
                 <h6>Nombre Proyecto 2</h6>
                 <h6>Descripcion:</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dicta molestias. Nisi aliquid sequi ad quisquam vel consequuntur in, exercitationem, ea id facere expedita minima voluptates distinctio qui mollitia ratione.</p>
+                <img src="" alt="">
             </li>
         </ul>
         <ul>
@@ -21,6 +23,7 @@
                 <h6>Nombre Proyecto 3</h6>
                 <h6>Descripcion:</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dicta molestias. Nisi aliquid sequi ad quisquam vel consequuntur in, exercitationem, ea id facere expedita minima voluptates distinctio qui mollitia ratione.</p>
+                <img src="" alt="">
             </li>
         </ul>
     </div>
