creacion de json data

--- a/portafolio/src/app/components/acerca-de/acerca-de.component.css
+++ b/portafolio/src/app/components/acerca-de/acerca-de.component.css
@@ -5,9 +5,11 @@ div{
 h6{
     margin-top: 10px;
     margin-left: 10px;
+    color: #ccc;
 }
 h5{
     margin-top: 10px;
+    color: #ccc;
 }
 .row{
     color: #ccc;
