--- a/portafolio/src/app/components/educacion/educacion.component.html
+++ b/portafolio/src/app/components/educacion/educacion.component.html
@@ -2,24 +2,23 @@
     <h5>Formación Académica</h5>
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <ul>
-            <li>
-                <h6> Curso/Carrera 1 (Periodo)</h6>
-                <h6>Descripcion:</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nobis molestias, possimus debitis ex incidunt laudantium animi, maxime at reiciendis error magnam perspiciatis aliquam consequatur non consectetur impedit facere? Fuga.</p>
-            </li>
-        </ul>
-        <ul>
-            <li>   
-                <h6> Curso/Carrera 2 (Periodo)</h6>
-                <h6>Descripcion:</h6>
-                <p>Lorem ipsum se voluptate assumenda officiis sit quo! Impedit praesentium minima quod harum quae enim quo esse consequuntur.</p>
-            </li>
-        </ul>
-        <ul>
-            <li>  
-                <h6> Curso/Carrera 3 (Periodo)</h6>
-                <h6>Descripcion:</h6>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga mollitia recusandae sed dolorem a illum laboriosam quas quasi repudiandae? Asperiores voluptas praesentium, perspiciatis eligendi rerum maxime eius architecto obcaecati dolorem.</p>
+            <li *ngFor="let educacion of educacionList">
+                <div class="data-container">
+                        <div class="list-info">
+                            <div>
+                                <h6>{{educacion.school}}</h6>
+                                <h6>{{educacion.carrer}}</h6>
+                                <h6>{{educacion.mode}}</h6> 
+                                <h6><time>{{educacion.start}} </time> - <time>{{educacion.end}} </time></h6>
+                                <h6>{{educacion.duracion}}</h6>
+                            </div>
+                        </div>
+                </div>
+                <div class="data-control">
+                    <div class="btn-edit">
+                        <a href="" class="btn-right"><i class="fa fa-pen"></i></a>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
