--- a/portafolio/src/app/components/footer/footer.component.html
+++ b/portafolio/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <footer>
-            <h6> Argentina Progama 2022/2023 </h6>
-            <h6>Ángel Gabriel Avellaneda | Desarrollador Full Stack Jr.</h6>
-            <h6>Rio Negro, Argentina</h6>
+            <h6> {{footer.company.name}}</h6>
+            <h6>{{footer.name}} | {{footer.position}}</h6>
+            <h6>{{footer.ubication}}</h6>
         </footer>
     </div>
 </div>
