--- a/portafolio/src/app/components/h/h.component.css
+++ b/portafolio/src/app/components/h/h.component.css
@@ -3,10 +3,19 @@ h5{
 }
 h6{
     margin-left: 5px;
+    color: #ccc;
+    text-align: center;
+}
+li{
+    color: #ccc;
+    text-align: center;
 }
 .row{
     padding: 10px;
     color: #ccc;
     background: #202020e1;
     text-align: left;
+}
+data-control{
+    color: #ccc;
 }
