--- a/portafolio/src/app/components/h/h.component.html
+++ b/portafolio/src/app/components/h/h.component.html
@@ -1,77 +1,26 @@
 <div class="row">
-    <h5>Hard & Soft Skills </h5>
+    <h5>Habilidades</h5>
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
         <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%">HTML</div>
+            <li *ngFor="let habilidades of hList" >
+                
+                <div class="data-container">
+                        <div class="list-info">
+                            
+                            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                <div class = "name"></div>
+                                <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 100%">
+                                    <h6>{{habilidades.name}}</h6>
+                                </div>
+                            </div> 
+                        </div>
+                </div>
+                <div class="data-control">
+                    <div class="btn-edit">
+                        <a href="" class="btn-right"><i class="fa fa-pen"></i></a>
                     </div>
+                </div>
             </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 50%">CSS</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%">ANGULAR</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 45%">TYPESCRIPT</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 85%">JAVA</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 55%">MYSQL</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 65%">GITHUB</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 50%">INGLÉS</div>
-                    </div>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <h6></h6>
-                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 80%">COOPERACIÓN</div>
-                    </div>
-            </li>
-        </ul>
+        </ul>  
     </div>
 </div>
