--- a/portafolio/src/app/components/proyectos/proyectos.component.css
+++ b/portafolio/src/app/components/proyectos/proyectos.component.css
@@ -4,9 +4,11 @@ div{
 }
 h5{
     margin-left: 10px;
+    color: #ccc;
 }
 h6{
     margin-left: 5px;
+    color: #ccc;
 }
 .row{
     padding: 10px;
