--- a/portafolio/src/app/components/h/h.component.html
+++ b/portafolio/src/app/components/h/h.component.html
@@ -6,11 +6,10 @@
                 
                 <div class="data-container">
                         <div class="list-info">
-                            
                             <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                 <div class = "name"></div>
                                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 100%">
-                                    <h6>{{habilidades.name}}</h6>
+                                    <h6>{{habilidades.name}} {{habilidades.porcentaje}}</h6>
                                 </div>
                             </div> 
                         </div>
